# SCOPE

./: .gitignore  LICENSE  Laks.ipynb  README.md  Snakefile  TN.ipynb  config.yaml  pyproject.toml
data/laks/: CNA_Genes.txt  F_hi_75.csv  F_hi_95.csv  F_lo_75.csv  F_lo_95.csv  Mutated_Genes.txt  floor.csv  loh-conflict-counts.csv  ov2295_tree.pickle  vaf_cn.csv
notebooks/: B.csv  Create-Tree-from-SBMClone.ipynb  F_model.csv  G.csv  Hypothesis Tests for Ovarian Cancer Phylogenies.ipynb  Labelling-Mutations-Clusters.ipynb  Laks copy.ipynb  Laks-CN.ipynb  Laks-CNA-Tree.ipynb  Laks-p-value-of-clonality.ipynb  Laks.ipynb  Laks_Scratch.ipynb  Laks_Scratch2.ipynb  Laks_new_formulation.ipynb  Laks_new_formulation_using_kmeans_clustering.ipynb  Laks_new_formulation_using_phertilizer_clusters.ipynb  Laks_with_Phertilizer_Clones.ipynb  Ovarian Cancer Dataset.ipynb  Overview.ipynb  Post-Processing-Fixes.ipynb  Prepare-data-for-pharming-2.ipynb  Prepare-data-for-pharming.ipynb  Prepare-data-for-phertilizer.ipynb  SCOPE on Meta-Cohort.ipynb  SCOPE on Ovarian Cancer Dataset.ipynb  Simulation Results.ipynb  Simulation.ipynb  TN.ipynb  TNBC.ipynb  U.csv  Variation-in-Laks-Results.ipynb  Williams Results.ipynb  Williams.ipynb  chisel_scratch.ipynb  compare-methods.ipynb  finding-CN-ordering-from-Laks.ipynb  scratch.csv  simulation-results copy.ipynb  simulation-results.ipynb
outputs/: f_plus_roots.csv
src/: laks_data.py  performance_metrics.py  phylogeny_utils.py  run_williams.py  simulate_data.py  simulation_helpers.py  solve_ilp.py  solve_ilp_2.py  solve_ilp_3.py  solve_ilp_4.py
(+48282 files in other folders)
